--- a/later/templates/base.html
+++ b/later/templates/base.html
@@ -7,68 +7,107 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta20/dist/css/tabler.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta20/dist/js/tabler.min.js"></script>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --tblr-font-sans-serif: 'Inter var',ui-sans-serif,system-ui,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji
+        }
+
+        html {
+            font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+        }
+
+        .antialiased {
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+
+        .dropdown-item:hover {
+            background-color: rgba(108, 122, 145, 0.08);
+        }
+    </style>
+
 </head>
 
-<body>
-<div class="page">
-    <nav class="navbar navbar-expand-md d-print-none navbar-dark bg-dark">
-        <div class="container-xl">
-            <a class="navbar-brand" href="/">Later</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mb-sm-0">
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
+<body class="antialiased">
+    <div class="page">
+        <header class="navbar navbar-expand-sm navbar-light d-print-none">
+            <div class="container-xl">
+                <a class="navbar-brand" href="/">Later</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mb-sm-0">
+                        {% if user.is_authenticated %}
+                        <!-- <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
+                        </li> -->
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/jobs' %}active{% endif %}" aria-current="page"
+                                href="{% url 'cronjob_list' %}">Jobs</a>
+                        </li>
+
+                        {% else %}
+
+                        <!-- <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
-                    </li>
+                    </li> -->
 
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/jobs' %}active{% endif %}" aria-current="page" href="{% url 'cronjob_list' %}">Jobs</a>
-                    </li>
+                        {% endif %}
+                    </ul>
 
-                    {% else %}
+                    <div class="d-flex">
+                        {% if user.is_authenticated %}
 
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
-                    </li>
+                        <!-- <a href="{% url 'logout' %}" class="btn me-2">Logout</a> -->
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
+                              <span class="avatar avatar-sm" style="background-image: url(https://ui-avatars.com/api/?name={{user.username}})"></span>
+                              <div class="d-none d-xl-block ps-2">
+                                <div>{{ user.username }}</div>
+                                <div class="mt-1 small text-secondary">{{ user.email }}</div>
+                              </div>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                              <a href="#" class="dropdown-item">Status</a>
+                              <a href="#" class="dropdown-item">Profile</a>
+                              <div class="dropdown-divider"></div>
+                              <a href="#" class="dropdown-item">Settings</a>
+                              <a href="{% url 'logout' %}"  class="dropdown-item">Logout</a>
+                            </div>
+                          </div>
 
-                    {% endif %}
-                </ul>
+                        {% else %}
 
-                <div class="d-flex">
-                    {% if user.is_authenticated %}
+                        <a href="{% url 'login' %}" class="btn me-2">Login</a>
 
-                    <a href="{% url 'logout' %}" class="btn btn-outline-light me-2">Logout</a>
+                        <a href="{% url 'register' %}" class="btn">Register</a>
 
-                    {% else %}
-
-                    <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Login</a>
-
-                    <a href="{% url 'register' %}" class="btn btn-outline-light">Register</a>
-
-                    {% endif %}
+                        {% endif %}
+                    </div>
                 </div>
             </div>
+        </header>
+
+        <div class="container mt-4">
+            {% block content %}
+            {% endblock %}
         </div>
-    </nav>
-
-    <div class="container mt-4">
-        {% block content %}
-        {% endblock %}
     </div>
-</div>
-
+<!-- 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 
 </body>
 
