feat: implement the cronjob worker and rename the project to AutoMage

--- a/later/templates/home.html
+++ b/later/templates/home.html
@@ -22,7 +22,7 @@
 <div class="text-center my-6">
     <div style="max-width: 900px;" class="mx-auto">
         <h1 class="hero-title">Effortless Cron Job Scheduling and Monitoring</h1>
-        <p class="hero-description">Say goodbye to the hassle of managing servers and infrastructure. With [Your Product Name], scheduling and monitoring cron jobs has never been easier.</p>
+        <p class="hero-description">Say goodbye to the hassle of managing servers and infrastructure. With AutoMage, scheduling and monitoring cron jobs has never been easier.</p>
     
         <a href="{% url 'login' %}">
             <button class="btn btn-primary mt-4">
