rename: to automage namespace

--- a/automage/templates/base.html
+++ b/automage/templates/base.html
@@ -39,7 +39,7 @@
     <div class="page">
         <header class="navbar navbar-expand-sm navbar-light d-print-none">
             <div class="container-xl">
-                <a class="navbar-brand" href="/">Later</a>
+                <a class="navbar-brand" href="/">AutoMage</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
