--- a/automage/templates/base.html
+++ b/automage/templates/base.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta20/dist/css/tabler.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta20/dist/js/tabler.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -103,6 +104,35 @@
             {% block content %}
             {% endblock %}
         </div>
+
+        <footer class="footer footer-transparent d-print-none">
+            <div class="container-xl">
+                <div class="row text-center align-items-center flex-row-reverse">
+                    <div class="col-lg-auto ms-lg-auto">
+                        <ul class="list-inline list-inline-dots mb-0">
+                            <li class="list-inline-item"><a href="#" target="_blank" class="link-secondary" rel="noopener">Email Us</a></li>
+                            <li class="list-inline-item"><a href="#" class="link-secondary">Privacy policy</a>
+                            </li>
+                            <li class="list-inline-item"><a href="#" target="_blank" class="link-secondary" rel="noopener">Terms of service</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+                        <ul class="list-inline list-inline-dots mb-0">
+                            <li class="list-inline-item">
+                                Copyright © 2024
+                                <a href="." class="link-secondary">Companio</a>.
+                                All rights reserved.
+                            </li>
+                            <!-- <li class="list-inline-item">
+                                <a href="#" class="link-secondary" rel="noopener">
+                                    v1.0.0-beta01
+                                </a>
+                            </li> -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 <!-- 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
