fix: improve model

--- a/jobs/templates/cronjob_edit.html
+++ b/jobs/templates/cronjob_edit.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Url</label>
-                            <input type="text" class="form-control" name="command" value="{{ cronjob.command }}" placeholder="http://example.com/..." />
+                            <input type="text" class="form-control" name="url" value="{{ cronjob.url }}" placeholder="http://example.com/..." />
                         </div>
                     </div>
                     <div class="card-footer">
