--- a/jobs/templates/cronjob_list.html
+++ b/jobs/templates/cronjob_list.html
@@ -70,7 +70,7 @@
             <div class="row align-items-center">
                 <div class="col text-truncate">
                     <a href="#" class="text-reset d-block">{{ cronjob.name }}</a>
-                    <div class="d-block text-secondary text-truncate mt-n1">{{ cronjob.schedule }} - {{ cronjob.command }}</div>
+                    <div class="d-block text-secondary text-truncate mt-n1">{{ cronjob.schedule }} - {{ cronjob.url }}</div>
                 </div>
                 <div class="col-auto d-flex">
                     <a href="#" class="btn btn-ghost-secondary mx-2">
