--- a/automage/templates/home.html
+++ b/automage/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}AutoMage - Home{% endblock %}
 
 {% block content %}
 
