--- a/automage/templates/registration/login.html
+++ b/automage/templates/registration/login.html
@@ -7,7 +7,7 @@
   <div class="container container-tight py-4">
     <div class="text-center mb-4">
       <a href="." class="navbar-brand navbar-brand-autodark">
-        <img src="/static/logo.png" width="110" height="32" alt="AutoMage" class="navbar-brand-image">
+        <img src="/static/logo.png" width="75" alt="AutoMage">
       </a>
     </div>
     <div class="card card-md">
