--- a/automage/templates/base.html
+++ b/automage/templates/base.html
@@ -40,7 +40,10 @@
     <div class="page">
         <header class="navbar navbar-expand-sm navbar-light d-print-none">
             <div class="container-xl">
-                <a class="navbar-brand" href="/">AutoMage</a>
+                <a class="navbar-brand" href="/">
+                    <img src="/static/logo.png" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+                    AutoMage
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -49,35 +52,23 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 mb-sm-0">
                         {% if user.is_authenticated %}
-                        <!-- <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
-                        </li> -->
-
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == '/jobs' %}active{% endif %}" aria-current="page"
                                 href="{% url 'cronjob_list' %}">Jobs</a>
                         </li>
-
-                        {% else %}
-
-                        <!-- <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
-                    </li> -->
-
                         {% endif %}
                     </ul>
 
                     <div class="d-flex">
                         {% if user.is_authenticated %}
 
-                        <!-- <a href="{% url 'logout' %}" class="btn me-2">Logout</a> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
                               <span class="avatar avatar-sm" style="background-image: url(https://ui-avatars.com/api/?name={{user.username}})"></span>
-                              <div class="d-none d-xl-block ps-2">
+                              <!-- <div class="d-none d-xl-block ps-2">
                                 <div>{{ user.username }}</div>
                                 <div class="mt-1 small text-secondary">{{ user.email }}</div>
-                              </div>
+                              </div> -->
                             </a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                               <a href="#" class="dropdown-item">Status</a>
