--- a/jobs/templates/cronjob_list.html
+++ b/jobs/templates/cronjob_list.html
@@ -73,7 +73,7 @@
                     <div class="d-block text-secondary text-truncate mt-n1">{{ cronjob.schedule }} - {{ cronjob.url }}</div>
                 </div>
                 <div class="col-auto d-flex">
-                    <a href="#" class="btn btn-ghost-secondary mx-2">
+                    <a href="{% url 'log_list' cronjob.pk %}" class="btn btn-ghost-secondary mx-2">
                         View logs
                     </a>
                     <div class="dropdown">
