--- a/automage/templates/base.html
+++ b/automage/templates/base.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
@@ -65,10 +64,6 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
                               <span class="avatar avatar-sm" style="background-image: url(https://ui-avatars.com/api/?name={{user.username}})"></span>
-                              <!-- <div class="d-none d-xl-block ps-2">
-                                <div>{{ user.username }}</div>
-                                <div class="mt-1 small text-secondary">{{ user.email }}</div>
-                              </div> -->
                             </a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                               <a href="#" class="dropdown-item">Status</a>
@@ -111,25 +106,15 @@
                         <ul class="list-inline list-inline-dots mb-0">
                             <li class="list-inline-item">
                                 Copyright © 2024
-                                <a href="." class="link-secondary">Companio</a>.
+                                <a href="." class="link-secondary">AutoMage</a>.
                                 All rights reserved.
                             </li>
-                            <!-- <li class="list-inline-item">
-                                <a href="#" class="link-secondary" rel="noopener">
-                                    v1.0.0-beta01
-                                </a>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
-<!-- 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script> -->
-
 </body>
 
 </html>
